--- a/project-base/package.json
+++ b/project-base/package.json
@@ -13,6 +13,7 @@
         "grunt-contrib-compress": "0.5.2",
         "grunt-contrib-imagemin": "0.1.4",
         "grunt-contrib-uglify": "0.2.2",
+        "grunt-contrib-jshint": "0.8.0",
         "grunt-contrib-qunit": "0.3.0",
         "grunt-bower-task": "0.2.3",
         "grunt-devtools": "0.1.0-7",
