--- a/project-base/bower.json
+++ b/project-base/bower.json
@@ -12,16 +12,32 @@
   "dependencies": {
     "jquery": "2.0.3",
     "backbone": "1.1.0",
-    "underscore": "1.5.2"
+    "underscore": "1.5.2",
+    "modernizr": "2.7.1",
+    "foundation": "5.0.2",
+    "normalize-scss":"2.1.3"
   },
   
 
   "exportsOverride": {
+    "jquery": {
+      "js": "**/jquery.js"
+    },
     "backbone": {
-      "": "**/backbone.js"
+      "js": "**/backbone.js"
     },
     "underscore": {
-      "": "**/underscore.js"
+      "js": "**/underscore.js"
+    },
+    "modernizr": {
+      "js": "**/modernizr.js"
+    },
+    "foundation": {
+      "js": "**/foundation.js",
+      "scss":"**/components/*.scss"
+    },
+    "normalize-scss": {
+      "scss":"**/*.scss"
     }
   }
 }
