--- a/project-base/package.json
+++ b/project-base/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "life-zero",
+    "name": "project-base",
     "version": "1.0.0",
     "main": "index.js",
     "devDependencies": {
