--- a/project-base/bower.json
+++ b/project-base/bower.json
@@ -10,12 +10,16 @@
   ],
 
   "dependencies": {
-    "jquery": "2.0.3",
+    "jquery": "2.1.0",
     "backbone": "1.1.0",
     "underscore": "1.5.2",
     "modernizr": "2.7.1",
-    "foundation": "5.0.2",
-    "normalize-scss":"2.1.3"
+    "foundation": "5.0.3",
+    "normalize-scss":"2.1.3",
+    "jquery.cookie":"1.4.0",
+    "fastclick": "0.6.11",
+    "jquery-placeholder": "2.0.7",
+    "lodash": "2.4.1"
   },
   
 
@@ -37,6 +41,18 @@
     },
     "normalize-scss": {
       "scss":"**/*.scss"
+    },
+    "jquery.cookie": {
+      "js":"**/jquery.cookie.js"
+    },
+    "fastclick": {
+      "js":"**/fastclick.js"
+    },
+    "jquery-placeholder": {
+      "js":"**/jquery.placeholder.js"
+    },
+    "lodash": {
+      "js":"**/lodash.compat.js"
     }
   }
 }
