--- a/sample_webpack/package.json
+++ b/sample_webpack/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "webpack": "~1.13.1",
     "webpack-dev-server": "~1.14.1"
+  },
+  "dependencies": {
+    "jquery": "~3.1.0"
   }
 }
