--- a/sample_webpack/package.json
+++ b/sample_webpack/package.json
@@ -4,14 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server"
+    "start": "webpack --watch -d & browser-sync start --config bs-config.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "~1.13.1",
-    "webpack-dev-server": "~1.14.1"
+    "webpack": "~1.13.1"
   },
   "dependencies": {
     "jquery": "~3.1.0"
