--- a/sample_gulp_webpack/package.json
+++ b/sample_gulp_webpack/package.json
@@ -18,6 +18,7 @@
     "webpack": "~1.13.1"
   },
   "dependencies": {
-    "jquery": "~3.1.0"
+    "jquery": "~3.1.0",
+    "underscore": "~1.8.3"    
   }
 }
