--- a/sample_gulp_webpack/package.json
+++ b/sample_gulp_webpack/package.json
@@ -15,10 +15,11 @@
     "gulp-uglify": "^2.0.0",
     "gulp-webpack": "^1.5.0",
     "require-dir": "^0.3.0",
-    "webpack": "~1.13.1"
+    "webpack": "~1.13.1",
+    "webpack-dev-server": "^1.16.1"
   },
   "dependencies": {
     "jquery": "~3.1.0",
-    "underscore": "~1.8.3"    
+    "underscore": "~1.8.3"
   }
 }
