--- a/sample_react_babel_redux_saga/package.json
+++ b/sample_react_babel_redux_saga/package.json
@@ -7,9 +7,11 @@
     "@types/react-dom": "^0.14.20",
     "@types/react-redux": "^4.4.35",
     "@types/redux": "^3.6.31",
+    "@types/redux-saga": "^0.9.31",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
+    "gulp": "^3.9.1",
     "gulp-if": "^2.0.1",
     "gulp-rename": "1.2.2",
     "gulp-uglify": "^2.0.0",
