--- a/sample_vue/package.json
+++ b/sample_vue/package.json
@@ -31,6 +31,7 @@
     "webpack-stream": "^3.2.0"
   },
   "dependencies": {
-    "vue": "2.3.3"
+    "vue": "2.3.3",
+    "vue-router": "^2.5.3"
   }
 }
