--- a/sample_vue/package.json
+++ b/sample_vue/package.json
@@ -24,6 +24,7 @@
     "vue-class-component": "^5.0.1",
     "vue-loader": "12.0.4",
     "vue-template-compiler": "^2.3.3",
+    "vue-template-loader": "^0.3.1",
     "webpack": "2.2.0",
     "webpack-dev-middleware": "1.9.0",
     "webpack-dev-server": "2.3.0",
