--- a/sample_react_redux/package.json
+++ b/sample_react_redux/package.json
@@ -3,35 +3,36 @@
   "version": "1.0.0",
   "main": "index.js",
   "devDependencies": {
-    "@types/react": "^15.0.0",
-    "@types/react-dom": "^0.14.20",
-    "@types/react-redux": "^4.4.35",
-    "@types/redux": "^3.6.0",
-    "gulp": "^3.9.1",
+    "@types/isomorphic-fetch": "0.0.33",
+    "@types/react": "15.0.0",
+    "@types/react-dom": "0.14.20",
+    "@types/react-redux": "4.4.35",
+    "@types/redux": "3.6.0",
+    "gulp": "3.9.1",
     "gulp-cssimport": "~3.1.0",
-    "gulp-if": "^2.0.1",
+    "gulp-if": "2.0.1",
     "gulp-rename": "1.2.2",
-    "gulp-uglify": "^2.0.0",
-    "gulp-webpack": "^1.5.0",
+    "gulp-uglify": "2.0.0",
+    "gulp-webpack": "1.5.0",
     "imports-loader": "~0.6.5",
-    "minimist": "^1.2.0",
-    "require-dir": "^0.3.0",
+    "minimist": "1.2.0",
+    "require-dir": "0.3.0",
     "rimraf": "~2.5.4",
     "run-sequence": "~1.2.2",
-    "ts-loader": "0.9.0",
-    "typescript": "2.0.3",
-    "webpack": "~1.13.1",
-    "webpack-dev-middleware": "^1.8.3",
-    "webpack-dev-server": "^1.16.1",
-    "webpack-hot-middleware": "^2.12.2"
+    "ts-loader": "1.3.1",
+    "typescript": "2.2.1",
+    "webpack": "2.2.0",
+    "webpack-dev-middleware": "1.9.0",
+    "webpack-dev-server": "2.3.0",
+    "webpack-hot-middleware": "2.15.0",
+    "webpack-stream": "^3.2.0"
   },
   "dependencies": {
     "react": "15.3.2",
     "react-dom": "15.3.2",
     "react-redux": "4.4.5",
     "redux": "3.6.0",
-    "redux-thunk": "^2.1.0",
-    "whatwg-fetch": "^2.0.1",
-    "whatwg-streams": "^0.1.1"
+    "redux-thunk": "2.1.0",
+    "isomorphic-fetch": "^2.2.1"
   }
 }
