--- a/project-base3/package.json
+++ b/project-base3/package.json
@@ -9,11 +9,16 @@
     "babel-core": "6.21.0",
     "babel-loader": "6.2.10",
     "babel-preset-es2015": "6.18.0",
+    "compression-webpack-plugin": "^0.3.2",
     "css-loader": "^0.28.10",
+    "del": "^2.2.2",
     "extract-text-webpack-plugin": "3.0.2",
     "gulp": "3.9.1",
+    "gulp-cssimport": "^5.0.0",
     "gulp-uglify": "2.0.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "3.1.0",
+    "gulp-minify-css": "^1.2.4",
     "require-dir": "0.3.0",
     "run-sequence": "1.2.2",
     "sass-loader": "^6.0.6",
