--- a/sample-npm-publish/fetch-library/package.json
+++ b/sample-npm-publish/fetch-library/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@va034600/fetch-sample",
+  "name": "@va034600/fetch-library",
   "version": "1.0.0",
   "description": "",
   "main": "./src/index.js",
