--- a/sample-npm-publish/fetch-main/package.json
+++ b/sample-npm-publish/fetch-main/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fetch-main",
+  "name": "@va034600/fetch-main",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
@@ -10,6 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@va034600/fetch-sample": "^1.0.0"
+    "@va034600/fetch-library": "^1.0.0"
   }
 }
